--- a/package.json
+++ b/package.json
@@ -16,11 +16,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "fastify": "^4.22.2"
+    "@prisma/client": "^5.2.0",
+    "bcrypt": "^5.1.1",
+    "fastify": "^4.22.2",
+    "jsonwebtoken": "^9.0.2",
+    "zod": "^3.22.2"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^20.5.9",
     "dotenv-cli": "^7.3.0",
+    "prisma": "^5.2.0",
     "tsx": "^3.12.8",
     "typescript": "^5.2.2"
   }
