--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fastify/cors": "^8.3.0",
     "@prisma/client": "^5.2.0",
     "bcrypt": "^5.1.1",
     "fastify": "^4.22.2",
@@ -28,6 +29,7 @@
     "@types/node": "^20.5.9",
     "dotenv-cli": "^7.3.0",
     "prisma": "^5.2.0",
+    "tsup": "^7.2.0",
     "tsx": "^3.12.8",
     "typescript": "^5.2.2"
   }
