feat: add node engine config

--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "conexao-eci-api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.js", 
+  "engines": {
+    "node": "18"
+  },
   "scripts": {
     "dev": "dotenv -e .env.development -- tsx watch src/server.ts",
     "migrate:dev": "dotenv -e .env.development -- npx prisma migrate dev",
